# geometric-traits

./: .gitignore  .lycheeignore  Cargo.toml  README.md  code_smells.md
.github/workflows/: links.yml  rust.yml
benches/: biconnected_components.rs  blossom_v.rs  cactus_detection.rs  canon.rs  chordal_detection.rs  diameter.rs  gth.rs  hungarian.rs  k23_homeomorph.rs  k33_homeomorph.rs  k4_homeomorph.rs  kocay.rs  lapmod.rs  lin.rs  matching.rs  mces_ground_truth.rs  mces_partial_hot.rs  minimum_cost_balanced_flow.rs  minimum_cycle_basis.rs  minimum_cycle_basis_variants.rs  motif_counting.rs  node_ordering.rs  planarity.rs  relevant_essential_cycles.rs  valued_symmetric_builder.rs  vf2.rs  wu_palmer.rs
docs/: blum-bugs.md  blum-investigation.md  bug1_reproduction_report.md  dandeh-lukovszki-ictcs-2025-blum.md  ever_guard_divergence.md  mces_200k_runtime_summary.json
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: biconnected_components.rs  bit_square_matrix.rs  blossom.rs  blossom_v.rs  blossom_v_structured.rs  blum.rs  canon_bliss.rs  canon_bliss_support.rs  csr2d.rs  delta_y_exchange.rs  diameter.rs  floyd_warshall.rs  gabow_1976.rs  generic_matrix2d_with_padded_diagonal.rs  gth.rs  hopcroft_karp.rs  jacobi.rs  johnson_cycle.rs  kahn.rs  karp_sipser.rs  kocay.rs  labeled_modular_product.rs  lap.rs  lapjv.rs  leiden.rs  lin.rs  line_graph.rs  louvain.rs  maximum_clique.rs  mds.rs  micali_vazirani.rs  modular_product.rs  node_ordering_application.rs  padded_matrix2d.rs  pairwise_bfs.rs  pairwise_dijkstra.rs  root_nodes.rs  simple_path.rs  sink_nodes.rs  tarjan.rs  (+4 more)
scripts/: generate_modularity_ground_truth.py  regenerate_mces_200k_runtime_artifacts.py
src/: errors.rs  impls.rs  lib.rs  naive_structs.rs  test_utils.rs  traits.rs
src/errors/: bipartite_graph_error.rs  monopartite_graph_error.rs  nodes.rs  sorted_error.rs
src/errors/bipartite_graph_error/: algorithms.rs  illegal_graph_states.rs
src/errors/builder/: edges.rs  vocabulary.rs
src/impls/: array.rs  bit_square_matrix.rs  compact_matrix.rs  csr.rs  csr2d_edges.rs  edge_contexts.rs  error.rs  generic_bimatrix.rs  generic_bimatrix2d.rs  generic_implicit_valued_matrix2d.rs  generic_iterators.rs  generic_matrix2d_with_padded_diagonal.rs  hashmap.rs  implicit_numeric_vocabularies.rs  lower_bounded_sparse_square_matrix.rs  padded_matrix2d.rs  ragged_vec.rs  ragged_vector.rs  ranged_csr.rs  slice.rs  sorted_array.rs  sorted_vec.rs  square_padding_utils.rs  squared_csr2d.rs  subset_sparse_square_matrix.rs  symmetric_csr.rs  tuple.rs  upper_triangular_csr.rs  valued_csr2d.rs  valued_matrix.rs  vec.rs  vector.rs
src/naive_structs/: directory_tree.rs  generic_bigraph.rs  generic_edges_builder.rs  generic_graph.rs  generic_monoplex_bipartite_graph_builder.rs  generic_vocabulary_builder.rs  named_types.rs  undirected_edges_builder.rs
src/traits/: algorithms.rs  bipartite_graph.rs  coordinates.rs  edge.rs  edges.rs  graph.rs  into_usize.rs  matrix.rs  monopartite_graph.rs  monoplex_bipartite_graph.rs  monoplex_graph.rs  monoplex_monopartite_graph.rs  node_typed_bipartite_graph.rs  node_typed_monopartite_graph.rs  numeric.rs  similarity.rs  symbol.rs  total_ord.rs  transmute_from.rs  transposed_directed_graph.rs  transposed_graph.rs  transposed_monoplex_graph.rs  transposed_monoplex_monopartite_graph.rs  transposed_weighted_graph.rs  undirected_monopartite_graph.rs  vector.rs  vocabulary.rs  weighted_monoplex_graph.rs
tests/: test_algorithm_edge_cases.rs  test_basic_traits.rs  test_biconnected_components.rs  test_biconnected_oracles.rs  test_bipartite_builder_errors.rs  test_bipartite_detection.rs  test_bipartite_graph_extended.rs  test_bipartite_graph_traits.rs  test_bit_square_matrix.rs  test_blanket_impls.rs  test_bliss_oracle.rs  test_blossom.rs  test_blossom_v.rs  test_blum.rs  test_builder_error_paths.rs  test_cactus_detection.rs  test_canon_generic_graphs.rs  test_canon_partition.rs  test_canon_refine.rs  test_canon_search.rs  test_chordal_detection.rs  test_chordal_ground_truth.rs  test_clique_ranking.rs  test_connected_components.rs  test_connected_components_extended.rs  test_connectivity_and_topology_misc.rs  test_coordinates.rs  test_coverage_gaps.rs  test_coverage_push.rs  test_coverage_tarpaulin_gaps.rs  test_crouse.rs  test_csr2d.rs  test_csr2d_boundaries.rs  test_csr2d_double_ended.rs  test_csr2d_error_paths.rs  test_csr2d_extended.rs  test_csr2d_graph_edges.rs  test_csr2d_iter_exact_size.rs  test_csr2d_iterator_len.rs  test_csr2d_iterators.rs  (+185 more)
tests/common/: mod.rs
tests/fixtures/: README.md  blossom_v_honggfuzz_sigabrt_case_10.hex  blossom_v_honggfuzz_sigabrt_case_11.hex  blossom_v_honggfuzz_sigabrt_case_12.hex  blossom_v_honggfuzz_sigabrt_case_13.hex  blossom_v_honggfuzz_sigabrt_case_14.hex  blossom_v_honggfuzz_sigabrt_case_15.hex  blossom_v_honggfuzz_sigabrt_case_16.hex  blossom_v_honggfuzz_sigabrt_case_6.hex  blossom_v_honggfuzz_sigabrt_case_7.hex  blossom_v_honggfuzz_sigabrt_case_8.hex  blossom_v_honggfuzz_sigabrt_case_9.hex  combine_topological_validity_shards.py  generate_biconnected_ground_truth.py  generate_floyd_warshall_ground_truth.py  generate_k23_homeomorph_ground_truth.py  generate_k33_homeomorph_ground_truth.py  generate_massspecgym_mces_all_best_ground_truth.py  generate_massspecgym_mces_all_best_holdouts.py  generate_massspecgym_mces_ground_truth.py  generate_maximum_clique_ground_truth.py  generate_mces_ground_truth.py  generate_modular_product_ground_truth.py  generate_topological_validity_ground_truth.py  measure_mces_rdkit.py  modularity_ground_truth.json
tests/support/: biconnected_fixture.rs  bliss_oracle.rs  blossom_v_regression_cases.rs  canon_bench_fixture.rs  chordal_fixture.rs  fixture_io.rs  k23_homeomorph_fixture.rs  k33_homeomorph_fixture.rs  max_matching_oracle.rs  minimum_cost_balanced_flow_oracle.rs  minimum_cycle_basis_fixture.rs  node_ordering_fixture.rs  planarity_fixture.rs  topological_validity_fixture.rs  undigraph_fixture.rs  vf2_fixture_suite.rs
tests/test_mces_ground_truth/: fixture_options.rs  manual.rs  parity.rs  support.rs
(+207 files in other folders)
