[package]
name = "geometric-traits"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.225", features = ["derive", "rc"], optional = true }
arbitrary = { version = "1", features = ["derive"], optional = true }
num-traits = "0.2"
multi_ranged = "0.1.1"
thiserror = "2.0"
lender = "0.4.2"

[lints.rust]
missing_docs = "forbid"
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"
unused_must_use = "forbid"
deprecated = "deny"

[lints.rustdoc]
broken_intra_doc_links = "forbid"
bare_urls = "forbid"
invalid_codeblock_attributes = "forbid"
invalid_html_tags = "forbid"
missing_crate_level_docs = "forbid"
unescaped_backticks = "forbid"
redundant_explicit_links = "forbid"
invalid_rust_codeblocks = "forbid"

[lints.clippy]
unreadable_literal = "allow"
missing_panics_doc = "allow"
new_ret_no_self = "allow"
struct_excessive_bools = "allow"
should_panic_without_expect = "allow"
doc_markdown = "allow"
clone_on_copy = "forbid"
pedantic = { level = "deny", priority = -1 }

[features]
default = ["std"]
std = []
arbitrary = ["dep:arbitrary"]
serde = ["dep:serde", "multi_ranged/serde"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "wu_palmer"
harness = false

[[bench]]
name = "lin"
harness = false
