[package]
name = "geometric-traits"
version = "0.1.0"
edition = "2024"
authors = ["The Earth Metabolome Initiative"]
description = "Trait-based algebraic and graph algorithms for Rust, supporting no_std environments"
license = "MIT"
repository = "https://github.com/earth-metabolome-initiative/geometric-traits"
documentation = "https://docs.rs/geometric-traits"
readme = "README.md"
keywords = ["graph", "algorithms", "traits", "no_std", "bipartite"]
categories = ["algorithms", "data-structures", "no-std"]
rust-version = "1.85"

[dependencies]
serde = { version = "1.0.225", features = ["derive"], default-features = false, optional = true }
arbitrary = { version = "1", features = ["derive"], default-features = false, optional = true }
num-traits = { version = "0.2", default-features = false }
multi_ranged = "0.1.1"
thiserror = { version = "2.0", default-features = false }
lender = { version = "0.4.2", default-features = false }
hashbrown = { version = "0.16.1", optional = true }
bitvec = { version = "1", default-features = false, features = ["alloc"] }
rand = { version = "0.8.5", default-features = false, features = ["alloc", "small_rng"] }

[lints.rust]
missing_docs = "forbid"
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"
unused_must_use = "forbid"
deprecated = "deny"

[lints.rustdoc]
broken_intra_doc_links = "forbid"
bare_urls = "forbid"
invalid_codeblock_attributes = "forbid"
invalid_html_tags = "forbid"
missing_crate_level_docs = "forbid"
unescaped_backticks = "forbid"
redundant_explicit_links = "forbid"
invalid_rust_codeblocks = "forbid"

[lints.clippy]
unreadable_literal = "allow"
missing_panics_doc = "allow"
new_ret_no_self = "allow"
struct_excessive_bools = "allow"
should_panic_without_expect = "allow"
doc_markdown = "allow"
duplicated_attributes = "forbid"
clone_on_copy = "forbid"
pedantic = { level = "deny", priority = -1 }

[features]
default = ["std"]
std = [
    "alloc",
    "serde?/std",
    "num-traits/std",
]
alloc = [
    "serde?/alloc",
    "serde?/rc",
    "hashbrown?/alloc",
]
arbitrary = ["dep:arbitrary", "std"]
serde = ["dep:serde", "multi_ranged/serde"]
hashbrown = ["dep:hashbrown"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "wu_palmer"
harness = false

[[bench]]
name = "lin"
harness = false

[[bench]]
name = "lapmod"
harness = false
