[package]
name = "graph-fuzz"
version = "0.0.0"
publish = false
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
honggfuzz = "0.5"
graph = { path = "../", features = ["arbitrary"] }
algebra = { path = "../../algebra", features = ["arbitrary"] }
arbitrary = { version = "1", features = ["derive"] }
functional_properties = { path = "../../../utils/functional_properties" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "root_nodes"
path = "fuzz_targets/root_nodes.rs"
test = false
doc = false

[[bin]]
name = "sink_nodes"
path = "fuzz_targets/sink_nodes.rs"
test = false
doc = false

[[bin]]
name = "simple_path"
path = "fuzz_targets/simple_path.rs"
test = false
doc = false


[[bin]]
name = "lin"
path = "fuzz_targets/lin.rs"
test = false
doc = false

[[bin]]
name = "wu_palmer"
path = "fuzz_targets/wu_palmer.rs"
test = false
doc = false


[[bin]]
name = "lapjv"
path = "fuzz_targets/lapjv.rs"
test = false
doc = false

[[bin]]
name = "csr2d"
path = "fuzz_targets/csr2d.rs"
test = false
doc = false

[[bin]]
name = "valued_csr2d"
path = "fuzz_targets/valued_csr2d.rs"
test = false
doc = false

[[bin]]
name = "padded_matrix2d"
path = "fuzz_targets/padded_matrix2d.rs"
test = false
doc = false

[[bin]]
name = "hopcroft_karp"
path = "fuzz_targets/hopcroft_karp.rs"
test = false
doc = false

[[bin]]
name = "kahn"
path = "fuzz_targets/kahn.rs"
test = false
doc = false

[[bin]]
name = "tarjan"
path = "fuzz_targets/tarjan.rs"
test = false
doc = false

[[bin]]
name = "johnson_cycle"
path = "fuzz_targets/johnson_cycle.rs"
test = false
doc = false

[[bin]]
name = "generic_matrix2d_with_padded_diagonal"
path = "fuzz_targets/generic_matrix2d_with_padded_diagonal.rs"
test = false
doc = false
